完成类目管理接口调试
