# internal/product-service/service/validators.go
@@ -69,8 +69,7 @@ func (v *UpdateCategoryRequestValidator) Validate() error {
 type ListCategoriesRequestValidator struct {
 	Page      int32  `validate:"omitempty,min=1" label:"页码"`
 	PageSize  int32  `validate:"omitempty,min=1" label:"每页条数"`
-	ParentID  string `validate:"-" label:"父类目ID"`
-	Level     int32  `validate:"-" label:"类目层级"`
+	Level     int32  `validate:"omitempty,min=1" label:"类目层级"`
 	Status    int32  `validate:"required,oneof=1 2" label:"状态"`
 	IsVisible bool   `validate:"-" label:"是否在前台展示"`
 	Keyword   string `validate:"omitempty,min=2,max=100" label:"关键词"`
@@ -80,7 +79,6 @@ func NewListCategoriesRequestValidator(req *productv1.ListCategoriesRequest) *Li
 	return &ListCategoriesRequestValidator{
 		Page:      req.Page,
 		PageSize:  req.PageSize,
-		ParentID:  req.ParentId,
 		Level:     req.Level,
 		Status:    req.Status,
 		IsVisible: req.IsVisible,
@@ -89,6 +87,30 @@ func NewListCategoriesRequestValidator(req *productv1.ListCategoriesRequest) *Li
 }
 
 func (v *ListCategoriesRequestValidator) Validate() error {
+	if err := validator.ValidateStruct(v); err != nil {
+		return errors.New(validator.FormatError(err))
+	}
+	return nil
+}
+
+type GetCategoryChildrenRequestValidator struct {
+	ParentID  string `validate:"-" label:"父类目ID"`
+	Status    int32  `validate:"required,oneof=1 2" label:"状态"`
+	IsVisible bool   `validate:"-" label:"是否在前台展示"`
+	Page      int32  `validate:"omitempty,min=1" label:"页码"`
+	PageSize  int32  `validate:"omitempty,min=1" label:"每页条数"`
+}
+
+func NewGetCategoryChildrenRequestValidator(req *productv1.GetCategoryChildrenRequest) *GetCategoryChildrenRequestValidator {
+	return &GetCategoryChildrenRequestValidator{
+		ParentID:  req.ParentId,
+		Status:    req.Status,
+		IsVisible: req.OnlyVisible,
+		Page:      req.Page,
+		PageSize:  req.PageSize,
+	}
+}
+func (v *GetCategoryChildrenRequestValidator) Validate() error {
 	if err := validator.ValidateStruct(v); err != nil {
 		return errors.New(validator.FormatError(err))
 	}
